--- a/calculator.css
+++ b/calculator.css
@@ -73,7 +73,8 @@ body {
     display: flex;
     background-color: #031265;
     color: white;
-    font-size: 2em;
+    font-size: 1.7em;
+    font-weight: bold;
     justify-content: center;
     align-items: center;
     box-shadow: 0px 0px 5px 0px rgb(187 186 186 / 70%);
