--- a/calculator.css
+++ b/calculator.css
@@ -73,7 +73,7 @@ body {
     display: flex;
     background-color: #031265;
     color: white;
-    font-size: 1.7em;
+    font-size: 4vh;
     font-weight: bold;
     justify-content: center;
     align-items: center;
