--- a/calculator.css
+++ b/calculator.css
@@ -6,7 +6,7 @@ body {
     align-items: center;
 }
 #zone {
-    height: 90vh;
+    height: 100vh;
     width: 70vh;
     max-width: 100vw;
     padding: 3%;
@@ -93,4 +93,10 @@ body {
 }
 .button:active {
     background-color: #6874b3;
+}
+@media screen and (min-height: 100vw) {
+    #zone {
+        height: 90vh;
+        width: 65vh;
+    }
 }
