--- a/calculator.css
+++ b/calculator.css
@@ -15,7 +15,7 @@ body {
     height: 100%;
     width: 100%;
     background-color: #0f2182;
-    border-radius: 2%;
+    border-radius: 10px;
     box-shadow: 3px 2px 10px 0px grey;
     padding: 3%;
 }
